Update for front end

--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,39 @@
 PORT=8080
 ENV=dev
 
-# MongoDB connection
-MONGO_URI=mongodb://go_insurance_user:go_insurance_pass@localhost:27017
-MONGO_DB=go_insurance_db
+# Database selection: "dynamodb" (default) or "mongo"
+DB_TYPE=dynamodb
+
+# DynamoDB settings (when DB_TYPE=dynamodb)
+AWS_REGION=us-east-1
+# Leave DYNAMODB_ENDPOINT empty for production AWS DynamoDB
+DYNAMODB_ENDPOINT=http://localhost:8000
+# For local development only
+AWS_ACCESS_KEY_ID=local
+AWS_SECRET_ACCESS_KEY=local
+
+# MongoDB settings (when DB_TYPE=mongo)
+MONGO_URI=mongodb://localhost:27017
+MONGO_DB=go_insurance
 
 # HTTP timeouts (in seconds)
 HTTP_READ_TIMEOUT_SEC=10
 HTTP_WRITE_TIMEOUT_SEC=10
 HTTP_IDLE_TIMEOUT_SEC=120
-HTTP_REQUEST_TIMEOUT_SEC=60
+HTTP_REQUEST_TIMEOUT_SEC=30
 
-# Mongo timeouts
+# Mongo timeouts (also used for health check)
 MONGO_CONNECT_TIMEOUT_SEC=5
 MONGO_OP_TIMEOUT_MS=500
+
+# Background workers
+WORKER_INTERVAL_SEC=5
+
+# Security
+API_KEY=demo-api-key-12345
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080
+RATE_LIMIT_RPM=100
+
+# Logging
+LOG_LEVEL=info
+LOG_FORMAT=text
