--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,63 @@
-# Binaries for programs and plugins
+# Binaries
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
-*.test
 
-# Build and output directories
+# Go
+*.test
+*.out
 /bin/
 /build/
 /dist/
+vendor/
 
-# Go build artifacts
-*.out
-*.a
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Coverage and testing files
-coverage.out
-*.coverprofile
+# Next.js
+frontend/.next/
+frontend/out/
 
-# IDE / Editor files
+# CDK
+infra/cdk.out/
+
+# Environment files (keep examples)
+.env
+.env.local
+.env*.local
+!.env.example
+frontend/.env
+!frontend/.env.example
+
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*.log
 
-# Dependency directories (if you ever use vendoring)
-vendor/
-
-# OS-specific junk
+# OS
 .DS_Store
 Thumbs.db
 
-# Environment / configuration files
-.env
-.env.local
-.env.*
-!.env.example
-*.config
-*.yaml
-*.yml
-*.toml
-*.json
+# Logs
+*.log
+logs/
 
-# Temporary files
+# Temp
 tmp/
 *.tmp
 *.bak
 
-# Logs
-logs/
-*.log
+# Coverage
+coverage.out
+*.coverprofile
+.nyc_output/
+coverage/
 
-# Generated files (e.g. mock data or generated code)
-generated/
-gen/
-
-# Mongo data (if any local dev data dirs)
+# Local dev data
 data/
