--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
 # Leave empty for local development (uses Next.js proxy)
-# Set to full URL for production: https://xxxxx.awsapprunner.com/api/v1
+# Production URL: https://api.insurance.labs.iron-pig.com/api/v1
 NEXT_PUBLIC_API_URL=
 NEXT_PUBLIC_API_KEY=demo-api-key-12345
