--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -291,7 +291,7 @@ jobs:
         run: |
           aws cloudfront create-invalidation \
             --distribution-id "${{ steps.stack.outputs.cloudfront-id }}" \
-            --paths "/index.html" "/_next/*"
+            --paths "/*"
 
   # ===== SUMMARY =====
   summary:
